--- a/app/views/contributions/_form.html.erb
+++ b/app/views/contributions/_form.html.erb
@@ -1,39 +1,39 @@
-
 <div class='form-title'>
-  <h1>Contribute to The Archive</h1>
+  <h1>Contribute to The Archive!</h1>
 </div>
 
 <div class="form">
   <%= form_for(@contribution) do |f| %>
-  <% if @contribution.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@contribution.errors.count, "error") %> prohibited this contribution from being saved:</h2>
-      <ul>
-      <% @contribution.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
+    <% if @contribution.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= pluralize(@contribution.errors.count, "error") %> prohibited this contribution from being saved:</h2>
+        <ul>
+          <% @contribution.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+        </ul>
+      </div>
   <% end %>
 
     <div class="field">
-      <%= f.text_field :contribution_url, placeholder: 'Enter the URL here!', class: 'contribution-field-URL' %>
+      <%= f.text_field :contribution_url, placeholder: 'Enter the URL here!', class: 'contribution-url-field' %>
     </div>
 
-    <h3>Choose the category from the list below</h3>
+    <h3>Choose the tag from the list below</h3>
 
     <div class="field">
       <%= f.collection_check_boxes :category_ids, Category.all, :id, :name, class: 'check-boxes' %>
     </div>
 
-    <h3>Or, recommened your own category!</h3>
+    <h3>Or, recommened your own tag!</h3>
 
     <div class="field">
-      <%= f.text_field :contribution_category, placeholder: 'Enter the category here!', class: 'contribution-field-category' %>
+      <%= f.text_field :contribution_category, placeholder: 'Enter the tag here!', class: 'contribution-category-field' %>
     </div>
 
     <div class="actions">
       <%= f.submit value: 'Submit', class: 'contribution-submit' %>
     </div>
+
   <% end %>
 </div>
