--- a/app/views/layouts/static.html.erb
+++ b/app/views/layouts/static.html.erb
@@ -24,7 +24,7 @@
   <div class="dimmer" data-sidebar-dimmer></div>
   <div class="cover-photo">
             <div class="img-cover"></div>
-                <%= image_tag('blurred-cover-photo') %> 
+            <%= image_tag('blurred-cover-photo' ,class: 'b-cover-photo') %> 
   </div>
 
     <div class="header" onmouseover="document.body.style.overflow='hidden';" onmouseout="document.body.style.overflow='auto';">
