--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -19,21 +19,27 @@ $purple: #8171B6; // lightgrey //
 
 .static-page-header {
       position: absolute;
-      width:50%;
+      width:500px;
       text-align: center;
       font-size: 2.2rem;
       padding: 0;
       margin-top: 2vh;
-      margin-left:25%;
+      left:0;
+      right:0;
+      margin-left:auto;
+      margin-right:auto;
       font-weight:400;
 }
 
 
-.about-content, .contact-content, .help-content , .copyright-content{
-	position: fixed;
-	width:60%;
+.about-content, .contact-content, .help-content , .copyright-content {
+	position: absolute;
+	width:600px;
 	font-size: 1.25rem;
 	top:15vh;
 	text-align: center;
-	margin: 0 20%;
+	left:0;
+                right:0;
+                margin-left:auto;
+                margin-right:auto;
 }
