--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,36 +1,32 @@
-<div class="new-post-container">
-<h2>Sign up</h2>
+<div class='signup-form-title'>
+  <%= nav_link_to 'Log in' ,new_user_session_path, class: 'login-header-form' %>
+  <%= nav_link_to 'Sign up' ,new_user_registration_path, class: 'login-header-form' %>
+</div>
+
+<div class="form">
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
   <div class="field">
-    <%= f.label :username%><br />
-    <%= f.text_field :username, autofocus: true %>
+    <%= f.text_field :username, autofocus: true , placeholder: 'Username', class: 'username-field' %>
   </div>
 
   <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+    <%= f.email_field :email , placeholder: 'Email', class: 'email-field' %>
   </div>
 
   <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
+    <%= f.password_field :password, autocomplete: "off", placeholder: 'Password (8 charaters minimum)', class: 'password-field'  %>
   </div>
 
   <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
+    <%= f.password_field :password_confirmation, autocomplete: "off", placeholder: 'Password Confirmation', class: 'password-field'  %>
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "Sign up" , class: 'signup-submit' %>
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
 </div>
