--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -17,11 +17,11 @@
   <% end %>
 
   <div class="field">
-    <%= f.text_field :name, placeholder: 'Category name', class: 'category-name-field' %>
+    <%= f.text_field :name, placeholder: 'Category name', class: 'category-name-field input' %>
   </div>
 
   <div class="actions">
-    <%= f.submit value: 'Submit', class: 'category-submit' %>
+    <%= f.submit value: 'Submit', class: 'category-submit submit' %>
   </div>
 
 <% end %>
