--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -17,15 +17,15 @@
 
 
   <div class="field">
-    <%= f.text_field :url, placeholder:'Youtube/Article Image/Vimeo URL' , class: 'post-url-field' %>
+    <%= f.text_field :url, placeholder:'Youtube/Article Image/Vimeo URL' , class: 'post-url-field input' %>
   </div>
 
   <div class="field">
-    <%= f.text_field :article_url, placeholder:'Article URL' , class: 'post-article-url-field' %>
+    <%= f.text_field :article_url, placeholder:'Article URL' , class: 'post-article-url-field input' %>
   </div>
 
   <div class="field">
-    <%= f.text_field :description, placeholder:'Description' , class: 'post-description-field' %>
+    <%= f.text_field :description, placeholder:'Description' , class: 'post-description-field input' %>
   </div>
 
   <div class="field">
@@ -33,7 +33,7 @@
   </div>
 
   <div class="actions">
-      <%= f.submit value: 'Submit', class: 'post-submit' %>
+      <%= f.submit value: 'Submit', class: 'post-submit submit' %>
   </div>
 
   <% end %>
