--- a/app/views/contributions/_form.html.erb
+++ b/app/views/contributions/_form.html.erb
@@ -16,7 +16,7 @@
   <% end %>
 
     <div class="field">
-      <%= f.text_field :contribution_url, placeholder: 'Enter the URL here!', class: 'contribution-url-field' %>
+      <%= f.text_field :contribution_url, placeholder: 'Enter the URL here!', class: 'contribution-url-field input' %>
     </div>
 
     <h3>Choose the tag from the list below</h3>
@@ -28,11 +28,11 @@
     <h3>Or, recommened your own tag!</h3>
 
     <div class="field">
-      <%= f.text_field :contribution_category, placeholder: 'Enter the tag here!', class: 'contribution-category-field' %>
+      <%= f.text_field :contribution_category, placeholder: 'Enter the tag here!', class: 'contribution-category-field input' %>
     </div>
 
     <div class="actions">
-      <%= f.submit value: 'Submit', class: 'contribution-submit' %>
+      <%= f.submit value: 'Submit', class: 'contribution-submit submit' %>
     </div>
 
   <% end %>
