--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <div class='signup-form-title'>
-  <%= nav_link_to 'Log in' ,new_user_session_path, class: 'login-header-form' %>
-  <%= nav_link_to 'Sign up' ,new_user_registration_path, class: 'login-header-form' %>
+  <%= nav_link_to 'Log in' ,new_user_session_path, class: 'login-header-form login-a' %>
+  <%= nav_link_to 'Sign up' ,new_user_registration_path, class: 'login-header-form login-b' %>
 </div>
 
 <div class="form">
