--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -23,7 +23,7 @@ $yellow: #FFF5AC; // yellow //
 	background-color: rgba(0,0,0, 0.5);
 	width: 400px;
 	position: absolute;
-	top:30vh;
+	top:200px;
 	left:0;
     	right:0;
     	margin-left:auto;
@@ -151,14 +151,16 @@ $yellow: #FFF5AC; // yellow //
            margin: 0 auto;
 	z-index: 9;
 	text-align: center;
-	top: 22.1vh;
+	top: 144px;
 	
 	a {
 		text-decoration:none;
 		color:$white;
 		font-family: roboto;
+		position: absolute;
 		font-weight: 400;
 		font-size: 1.4rem;
+		width: 220px;
 		padding: 15px 0px;
 		background-color: rgba(0,0,0,0.5);
 	}
@@ -168,16 +170,11 @@ $yellow: #FFF5AC; // yellow //
 	}
 }
 
-.login-header-form.login-a {
-	width: 220px;
-	position: absolute;
+.login-a {
 	left: 0;
 }
-
-.login-header-form.login-b {
-	width: 220px;
-	position: absolute;
-	left: 50%;
+.login-b {
+	right: 0;
 }
 
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
