trying to style checkboxes

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,7 +15,10 @@
  *= require_self 
 
  */
-/*-------------------------------------Constants---------------------------------------*/
+
+/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
+/* - - - - - - - - - - - - - - - - - - - - - - - - - - - Constants - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
+/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
 
 $blue: #81B6DB;  // blue  //
 $green: #77DD77;    // green // 
@@ -25,11 +28,14 @@ $lightred: #FFD8E8; // light red//
 $orange: #FFB246;   // orange //
 $white: #fff; // white // 
 $black: #000; // black //
-$grey: #eee; // lightgrey //
+$lightgrey: #eee; // lightgrey //
+$grey: #888; // grey //
 $purple: #8171B6; // purple //
 $yellow: #FFF5AC; // yellow //
 
-/*-------------------------------------Main Style---------------------------------------*/
+/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
+/* - - - - - - - - - - - - - - - - - - - - - - - - - - -  General  - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
+/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
 
 body {
   background-color:#F4F4F5;
@@ -55,7 +61,14 @@ body {
   justify-content: center;
   align-items: center;
 }
-/*--------------------------------------Cover pic---------------------------------------*/
+
+.dimmer {
+  background-color:#000
+}
+
+/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
+/* - - - - - - - - - - - - - - - - - - - - - - - - -  Cover Pic  - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
+/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
 
 .cover-photo {
   width:100vw;
@@ -92,7 +105,10 @@ body {
       width:100%;
 }
 
-/*--------------------------------------Main Title--------------------------------------*/
+/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
+/* - - - - - - - - - - - - - - - - - - - - - - - -  Header / Logo - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
+/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
+
 .header {
   width:100%;
   height:10vh;
@@ -101,29 +117,30 @@ body {
   box-shadow:0 0 90px 0 rgba(0,0,0,0.4);
   z-index:8;
   opacity: 0.95;
-}
-
-/*--------------------------------------Home button--------------------------------------*/
-.header .logo {
-  float:left;
-  margin:0;
-  padding:0;
   
-    a {
-       z-index: 6;
-      position:relative;
-      font-size:2rem;
-      margin: 0;
-      line-height:10vh;
-      font-weight:500;
-      text-decoration:none;
-      color:$white;
-      padding:20px 30px 15px 40px
-    }
+     .logo {
+          float:left;
+          margin:0;
+          padding:0;
+          
+            a {
+               z-index: 6;
+              position:relative;
+              font-size:2rem;
+              margin: 0;
+              line-height:10vh;
+              font-weight:500;
+              text-decoration:none;
+              color:$white;
+              padding:20px 30px 15px 40px
+            }
+      }
 }
 
 
-/*------------------------------------Title Bar/Drop Down--------------------------------*/
+/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
+/* - - - - - - - - - - - - - - - - - - - - - - - - -  Tag Section - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
+/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
 
 
 .tag-container {
@@ -203,7 +220,9 @@ body {
       background-color:$white;
 }
 
-/*  --------------------------------------- Search ------------------ */
+/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
+/* - - - - - - - - - - - - - - - - - - - - - - - -  Search Section - - - - - - - - - - - - - - - - - - - - - - - - - -  */
+/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
 
 .search-button {
   margin: 0 0 0 20px;
@@ -248,7 +267,10 @@ body {
 .search-button:hover{
   color:$lightred;
 }
-/*  --------------------------------------- login ------------------ */
+
+/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
+/* - - - - - - - - - - - - - - - - - - - - - - - -  Login Section - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
+/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
 
 .login-section {
   float: right;
@@ -321,7 +343,10 @@ body {
 .user-links .selected {
   font-weight:500;
 }
-/*  --------------------------------------- Contribute section------------------ */
+
+/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
+/* - - - - - - - - - - - - - - - - - - - - - - - - - -  Contribute  - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
+/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
 
 .contribute-section {
   height:10vh;
@@ -342,8 +367,9 @@ body {
 }  
 
 
-
-/*  --------------------------------------- Extra Buttons------------------ */
+/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
+/* - - - - - - - - - - - - - - - - - - - - - - - -  Extra Button - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
+/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
 
 
 .extra-button {
@@ -366,7 +392,10 @@ body {
   color:$lightred
 }
 
-/*  --------------------------------------- Hero Buttons------------------ */
+/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
+/* - - - - - - - - - - - - - - - - - - - - - - - -  Hero Section  - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
+/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
+
 .hero-phrase {
   font-size:3rem;
   position:absolute;
@@ -456,7 +485,9 @@ body {
 }
 
 
-/*--------------------------------------- Side Bar ------------------ */
+/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
+/* - - - - - - - - - - - - - - - - - - - - - - - - Sidebar Section - - - - - - - - - - - - - - - - - - - - - - - - - -  */
+/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
 
 
 .sidebar {
@@ -520,18 +551,4 @@ body {
   z-index:11
 }
 
-.dimmer {
-  background-color:#000
-}
 
-/*--------------------------------------- Content --------------------------------------*/
-
-.breaker {
-	height:10vh;
-	position: absolute;
-	top:90vh;
-	left: 0;
-	width: 100%;
-}
-.content {
-}
