--- a/app/views/contributions/_form.html.erb
+++ b/app/views/contributions/_form.html.erb
@@ -21,7 +21,7 @@
 
     <h3>Choose a tag from the list below</h3>
 
-    <div class="field">
+    <div class="field checkbox-field">
       <%= f.collection_check_boxes :category_ids, Category.all, :id, :name, class: 'check-boxes' %>
     </div>
 
