--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,12 +25,13 @@
   <div class="dimmer" data-sidebar-dimmer></div>
 
   <div class="cover-photo">
-            <%= link_to root_path do %>
-                <div class="img-cover"></div>
-             <% end %>
             <% if current_page?('/') or current_page?('/posts') %>
+                <div class="img-cover"></div>
                 <%= image_tag('cover-photo-min', class: 'nb-cover-photo') %> 
             <% else %>
+              <%= link_to root_path do %>
+                <div class="img-cover"></div>
+              <% end %>
                   <%= image_tag('blurred-cover-photo' ,class: 'b-cover-photo') %> 
            <% end %>
   </div>
@@ -51,7 +52,7 @@
                       <h3 class="tag-title">Tags</h3>
                       <i class="fa fa-tags tags-button"></i>
                 </div>
-                <div class="category-tags center">  
+                <div class="category-tags">  
                     <nav >
                       <ul>  
                             <li> <%= nav_link_to 'All', root_path, class: 'category-links'  %></li>
@@ -121,61 +122,6 @@
       </div>
 
   </div>
-
-
-
-<!-- - - - - - - - -  - - - - - - - - - - - - - - java - - - - - - - - - - - - - - - - - - - - - - - - -->    
-<script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
-<script src="assets/jquery.easing.1.3.js"></script>
-
-
-<script>
-  function play(object){
-    $(object.querySelector('.overlay')).hide(200);
-    object.querySelector('iframe').src =
-    object.querySelector('iframe').src.replace('autoplay=0','&autoplay=1');
-    return false;
-  }
-</script>
-
-<script >
-  $(".scroll-to-content").click(function() {
-    $('html,body').animate({
-        scrollTop: $(".breaker").offset().top},
-        1000,'easeOutBounce')
-});
-</script>
-
-<script>
-  $(document).ready(function() {
-    $(".tag-wrap").click(function(e) {
-        $(".category-tags").toggle();
-        e.stopPropagation();
-    });
-
-    $(document).click(function(e) {
-        if (!$(e.target).is('.category-tags, .category-tags*')) {
-            $(".category-tags").hide();
-        }
-    });
-});
-</script>
-
-<script>
-  $(document).ready(function() {
-    $(".login-section").click(function(e) {
-        $(".user-popup").toggle();
-        e.stopPropagation();
-    });
-
-    $(document).click(function(e) {
-        if (!$(e.target).is('.user-popup, .user-popup*')) {
-            $(".user-popup").hide();
-        }
-    });
-});
-</script>
-
 
 </body>
 </html>
