--- a/app/views/contributions/_form.html.erb
+++ b/app/views/contributions/_form.html.erb
@@ -22,7 +22,10 @@
     <h3>Choose tags from the list below</h3>
 
     <div class="field checkbox-field">
-      <%= f.collection_check_boxes :category_ids, Category.all, :id, :name %>
+      <%= f.collection_check_boxes( :category_ids, Category.all, :id, :name)  do |b| %> 
+      <%= b.check_box(class: 'check_box') %>
+      <%= b.label(class: "checkbox_label") %>
+      <% end %>
     </div>
 
     <h3>Or, recommend your own tag!</h3>
