--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -29,8 +29,11 @@
   </div>
 
   <div class="field checkbox-field">
-    <%= f.collection_check_boxes :category_ids, Category.all, :id, :name , class: 'check-boxes' %>
-  </div>
+      <%= f.collection_check_boxes( :category_ids, Category.all, :id, :name)  do |b| %> 
+      <%= b.check_box(class: 'check_box') %>
+      <%= b.label(class: "checkbox_label") %>
+      <% end %>
+    </div>
 
   <div class="actions">
       <%= f.submit value: 'Submit', class: 'post-submit submit' %>
