nav bar animate

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -101,6 +101,9 @@ body {
   box-shadow:0 0 90px 0 rgba(0,0,0,0.4);
   z-index:8;
   opacity: 0.95;
+  top: 0;
+  transition: top 0.5s ease-in-out;
+  width: 100%;
 }
 
 /*--------------------------------------Home button--------------------------------------*/
@@ -534,4 +537,8 @@ body {
 	width: 100%;
 }
 .content {
+}
+
+.nav-up {
+    top: -15vh;
 }
