--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,17 +1,38 @@
 <div class="main-container">
-	<div class="vid-menu">
-		<i class="fa fa-twitter-square"></i>
-	</div>
-	<div class="vote-wrapper">
-		<%= render 'like', post: post %>
-	</div>
+	<div class="buttons">
 
-	<div class="bookmark-wrapper">
-		<%= render 'bookmark', post: post %>
-	</div>
+		<div class="vid-menu">
+				<a href="http://twitter.com/home?status=I've read and recommend #Jerseywordfest" title="Share on Twitter" target="_blank" class="btn btn-twitter"><i class="fa fa-twitter-square"></i></i></a>
+				 <!-- Facebook -->
+				<a href="https://www.facebook.com/sharer.php?u=&=I've read recommend " title="Share on Facebook" target="_blank" class="btn btn-facebook"><i class="fa fa-facebook-square"></i></a>
+		</div>
+		<div class="vote-wrapper">
+			<%= render 'like', post: post %>
+		</div>
 
+		<div class="bookmark-wrapper">
+			<%= render 'bookmark', post: post %>
+		</div>
+
+	</div>
 
 	<div class="post-container" onclick="play(this)">
+			<div class="buttons">
+	
+		<div class="vid-menu">
+				<a href="http://twitter.com/home?status=I've read and recommend #Jerseywordfest" title="Share on Twitter" target="_blank" class="btn btn-twitter"><i class="fa fa-twitter-square"></i></i></a>
+				 <!-- Facebook -->
+				<a href="https://www.facebook.com/sharer.php?u=&=I've read recommend " title="Share on Facebook" target="_blank" class="btn btn-facebook"><i class="fa fa-facebook-square"></i></a>
+		</div>
+		<div class="vote-wrapper">
+			<%= render 'like', post: post %>
+		</div>
+
+		<div class="bookmark-wrapper">
+			<%= render 'bookmark', post: post %>
+		</div>
+
+	</div>
 
 		<% if post.url.include?("youtube") || post.url.include?("vimeo") %>
 			<div class="overlay <%= overlay_color %>" > 
