--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -192,9 +192,9 @@ body {
   float: left;
   text-align: center;
   z-index: 5;
-  background-color: rgba(0,0,0,0.5);
+  background-color: rgba(0,0,0,0.4);
   border-radius:0 0 5px 5px;
-  box-shadow: 0px 6px 60px -5px $black;
+  box-shadow: 0px 6px 60px -5px rgba(0,0,0,0.4);;
   
   nav {
     position: relative;
@@ -426,6 +426,7 @@ body {
   top:400px;
   width: 100%;
 }
+
 #random-button,.mostrecent-button {
   font-size:1.5rem;
   position:relative;
@@ -452,7 +453,7 @@ body {
 }
 
 .scroll-to-content {
-  font-size:3rem;
+  font-size:4rem;
   width:100%;
   position:absolute;
   text-align:center;
