--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -10,11 +10,15 @@
 					<%= render 'like', post: post %>
 				</div>
 
+				<div class="share-wrapper">
+					<%= render 'share', post: post %>
+				</div>
+
 				<div class="bookmark-wrapper">
 					<%= render 'bookmark', post: post %>
 				</div>
 
-			</div>
+	</div>
 
 	<div class="post-container" onclick="play(this)">
 
