--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -63,29 +63,45 @@ iframe {
 }
 .vote-wrapper {
   position:absolute;
+  z-index:10;
+  text-align:center;
+  top:70px;
+  left:20px;
+  background-color: $blue; 
+  width: 40px;
+  height: 40px;
+  border-radius: 3px;
+}
+
+.vote-number {
+  position: relative;
+  bottom: 0px;
+  right:3px;
+  color:$blue;
+}
+
+.vote-wrapper a{
+  text-align: right;
+  text-decoration: none;
+}
+
+.vote-wrapper img{
+  height: 35px;
+  width: 35px;
+}
+
+
+.share-wrapper {
+  position:absolute;
   font-size:2.5rem;
   z-index:10;
   text-align:center;
   top:20px;
-  right:20px;
+  left:20px;
   background-color: $blue; 
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-}
-
-.vote-number {
-  float: right;
-}
-
-.vote-wrapper a{
-  text-decoration: none;
-  line-height: 50px;
-}
-
-.vote-wrapper img{
-  height: 30px;
-  width: 30px;
+  width: 40px;
+  height: 40px;
+  border-radius: 3px;
 }
 
 .overlay {
@@ -167,11 +183,8 @@ iframe {
   z-index:10;
   text-align:center;
   top:20px;
-  right:100px;
-  background-color: $blue; 
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
+  right:20px;
+
 }
 
 .bookmark-wrapper:hover {
