--- a/app/views/posts/_like.html.erb
+++ b/app/views/posts/_like.html.erb
@@ -1,6 +1,6 @@
 	    	<%= link_to like_post_path(post), id: dom_id(post), remote: true  do %>
-	    		<%= image_tag("bulb-icon-1005064002.png") %>
+	    		<%= image_tag("bulb-icon-1005064002.png") %><br>
 	    		<div class="vote-number">
-	    			<%= post.get_upvotes.size %>	    		
-	    		</div>
+	    			<%= post.get_upvotes.size %>
+	    		</div>	    		
 	    	<%end%>
