--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -361,20 +361,21 @@ body {
 
 .contribute-section {
   height:10vh;
-  line-height: 10vh;
   float: right;
-  margin-right: 10px;
-  
-    a {
-      text-decoration:none;
+  margin-right: 18px;
+  cursor:pointer;
+  line-height: 10vh;
+  text-align: center;
+    
+    .contribute-button {
+      margin-top: 2vh;
       color:$white;
-      font-size: 1rem;
-      padding: 10px;
-    }
-
-    &:hover a {
-      color:$lightred;
-    }
+      font-size: 2.5rem;
+      
+            &:hover {
+              color:$lightred;
+            }
+      }
 }  
 
 
@@ -506,7 +507,10 @@ body {
   height:100%;
   right:-200px;
   margin-top:10vh;
-  background-color:$blue;
+  background-color:$purple;
+ -webkit-box-shadow:  -3px 0px 12px -2px rgba(0,0,0,0.4);
+ -moz-box-shadow:  -3px 0px 12px -2px rgba(0,0,0,0.4);
+ box-shadow:  -3px 0px 12px -2px rgba(0,0,0,0.4);
 }
 
 [data-sidebar] {
