--- a/app/views/contributions/_form.html.erb
+++ b/app/views/contributions/_form.html.erb
@@ -28,7 +28,7 @@
       <% end %>
     </div>
 
-    <h3>Or, recommend your own tag!</h3>
+    <div class="recommend-wrap"><h3 class="contribute-new-tag">Or, recommend your own tag!</h3></div>
 
     <div class="field">
       <%= f.text_field :contribution_category, placeholder: 'Enter the tag here!', class: 'contribution-category-field input' %>
