--- a/app/views/contributions/index.html.erb
+++ b/app/views/contributions/index.html.erb
@@ -1,28 +1,19 @@
-<h1>Listing Contributions</h1>
+<div class="form">
+<% @contributions.each do |contribution| %>
 
-<table>
-  <thead>
-    <tr>
-      <th>Url</th>
-      <th>Category Contribution</th>
+    <div class="field">
+        <%= link_to contribution.contribution_url %>
+        <%= contribution.contribution_category %>
+        <% @category_name = Category.joins(:contributions).where(contributions: { id: [ contribution.id]}).all %>
+        <% @category_name.each do |category| %>
+            <%= category.name %>
+        <% end %>
+  
 
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+    </div>
 
-  <tbody>
-    <% @contributions.each do |contribution| %>
-      <tr>
-        <td><%= contribution.contribution_url %></td>
-        <td><%= contribution.contribution_category %></td>
-        <td><%= link_to 'Show', contribution %></td>
-        <td><%= link_to 'Edit', edit_contribution_path(contribution) %></td>
-        <td><%= link_to 'Destroy', contribution, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+        <%= link_to 'Destroy', contribution, method: :delete, data: { confirm: 'Are you sure?' } %>
 
-<br>
+<% end %>
 
-<%= link_to 'New Contribution', new_contribution_path %>
+</div>
